Fix basic layout issues

--- a/assets/less/form.less
+++ b/assets/less/form.less
@@ -3,13 +3,29 @@ fieldset {
 }
 
 .sly-form label {
-	display: block;
+	display: inline-block;
+	vertical-align: middle;
+	width: 220px;
 	margin-bottom: @gap-layout-sm;
 
 	&.sly-inline {
 		margin: 0;
 		display: inline-block;
 	}
+}
+
+.sly-form input[type=text] {
+	vertical-align: middle;
+}
+
+.sly-form label.sly-inline,
+.sly-area-content.sly-form label,
+.sly-form .sly-select-group label {
+	width: auto;
+}
+
+.sly-form-textarea-row label {
+	vertical-align: top;	
 }
 
 .sly-form .sly-form-wrapper .sly-form-row:last-child {
@@ -29,6 +45,36 @@ fieldset {
 
 .sly-form-col-2 .sly-form-col-a {
 	margin-bottom: @gap-layout-md;
+}
+
+.sly-form-col-a,
+.sly-form-col-b {
+	&.sly-form-linklist-row label,
+	&.sly-form-mediawidget-row label,
+	&.sly-form-password-row label {
+		float: left;
+		margin-top: 8px;
+		margin-right: 5px;
+	}
+}
+
+.pw-feedback {
+	display: inline-block;
+	margin-left: 225px;
+}
+
+.wv8-form {
+	input[type=text],
+	textarea,
+	.sly-form-select {
+		width: 400px;
+	}
+
+}
+
+.sly-widget.sly-media .sly-icons,
+.sly-widget.sly-link .sly-icons {
+	width: auto;
 }
 
 @media (min-width: @screen-md-min) {
@@ -103,6 +149,9 @@ fieldset {
 
 .sly-form-text,
 .sly-form-textarea {
+	display: inline-block;
+	width: auto;
+	min-width: 262px;
 	box-shadow: none;
 
 	&:extend(.form-control all);
@@ -118,7 +167,15 @@ fieldset {
 	}
 }
 
+#sly-page-formevaluation {
+	.sly-form-text,
+	.sly-form-textarea {
+		min-width: 550px;
+	}
+}
+
 .sly-form-read {
+	vertical-align: middle;
 	cursor: default;
 	white-space: nowrap;
 	border-color: transparent;
@@ -285,8 +342,10 @@ fieldset {
 	}
 }
 
+.sly-form-read,
 .sly-form-select {
-	width: 100%;
+	min-width: 262px;
+	/*width: 100%;*/
 }
 
 .sly-select-checkbox-list {
